--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2",
+    "connect-mongo": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "joi": "^18.0.2",
     "mongoose": "^8.0.0"
   },
